--- a/HrPortalV2.Web/Areas/Admin/Views/Jobs/Index.cshtml
+++ b/HrPortalV2.Web/Areas/Admin/Views/Jobs/Index.cshtml
@@ -4,57 +4,57 @@
     ViewData["Title"] = "Meslekler";
 }
 
-<h2>Index</h2>
+
 
 <p>
     <a asp-action="Create">Yeni Meslek</a>
 </p>
-<table class="table" id="tblRecords">
+<table  id="tblRecords" class="table">
     <thead>
         <tr>
-            <th>
+            <th class="text-nowrap all">
                 @Html.DisplayNameFor(model => model.Title)
             </th>
-            <th>
+            <th class="text-nowrap">
                 @Html.DisplayNameFor(model => model.Description)
             </th>
-            <th>
+            <th class="text-nowrap">
                 @Html.DisplayNameFor(model => model.Company)
             </th>
-            <th>s
+            <th class="text-nowrap">
                 @Html.DisplayNameFor(model => model.PublishDate)
             </th>
-            <th>
+            <th class="text-nowrap">
                 @Html.DisplayNameFor(model => model.EndDate)
             </th>
-            <th>
+            <th class="text-nowrap">
                 @Html.DisplayNameFor(model => model.IsApproved)
             </th>
-            <th>
+            <th class="text-nowrap">
                 @Html.DisplayNameFor(model => model.IsActive)
             </th>
-            <th>
+            <th class="text-nowrap">
                 @Html.DisplayNameFor(model => model.IsFeatured)
             </th>
-            <th>
+            <th class="text-nowrap">
                 @Html.DisplayNameFor(model => model.Position)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.CreateDate)
             </th>
-            <th>
+            <th class="text-nowrap">
                 @Html.DisplayNameFor(model => model.CreatedBy)
             </th>
-            <th>
+            <th class="text-nowrap">
                 @Html.DisplayNameFor(model => model.UpdateDate)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.UpdatedBy)
             </th>
-            <th>
+            <th class="text-nowrap">
                 @Html.DisplayNameFor(model => model.IPAddress)
             </th>
-            <th class="text-nowrap all">Eylemler</th>
+            <th class="text-nowrap">Eylemler</th>
         </tr>
     </thead>
     <tbody>
@@ -102,7 +102,7 @@
             <td>
                 @Html.DisplayFor(modelItem => item.IPAddress)
             </td>
-            <td>
+            <td class="text-nowrap">
                 <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-sm btn-primary">Düzenle</a> 
                 <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-sm btn-default">Detaylar</a> 
                 <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-sm btn-danger">Sil</a>
