--- a/HrPortalV2.Web/Areas/Admin/Views/Companies/Create.cshtml
+++ b/HrPortalV2.Web/Areas/Admin/Views/Companies/Create.cshtml
@@ -1,15 +1,14 @@
 ﻿@model HrPortalV2.Models.Company
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Yeni Firma";
 }
 
-<h2>Create</h2>
+<h2>Yeni Firma</h2>
 
-<h4>Company</h4>
-<hr />
+
 <div class="row">
-    <div class="col-md-4">
+    <div class="col-md-8">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
