--- a/HrPortalV2.Web/Areas/Admin/Views/Jobs/Create.cshtml
+++ b/HrPortalV2.Web/Areas/Admin/Views/Jobs/Create.cshtml
@@ -88,7 +88,7 @@
                 <span asp-validation-for="IPAddress" class="text-danger"></span>
             </div>
 			<div class="form-group">
-				<input type="submit" value="Oluştur" class="btn btn-default" />
+				<input type="submit" value="Oluştur" class="btn btn-sm btn-primary" />
 				<a asp-action="Index"class=" btn btn-sm btn-danger">İptal</a>
 			</div>
         </form>
