--- a/HrPortalV2.Web/Views/Resumes/Create.cshtml
+++ b/HrPortalV2.Web/Views/Resumes/Create.cshtml
@@ -49,7 +49,7 @@
                         <img src="~/Uploads/@Model.Photo" width="50" />
                     }
 
-                    <input name="File" type="file" class="form-control" />
+                    <input name="upload" type="file" class="form-control" />
                     <span asp-validation-for="Photo" class="text-danger"></span>
                 </div>
                 <div class="form-group">
