--- a/HrPortalV2.Web/Views/Resumes/Edit.cshtml
+++ b/HrPortalV2.Web/Views/Resumes/Edit.cshtml
@@ -43,11 +43,11 @@
                 </div>
                 <div class="form-group">
                     <input asp-for="Photo" type="hidden" />
-                    <label asp-for="Photo" class="control-label"></label>
                     @if (!string.IsNullOrEmpty(Model.Photo))
                     {
-                        <img src="~/Uploads/@Model.Photo" width="50" />
+                        <img src="~/Uploads/@Model.Photo" width="50" /> <br />
                     }
+                    <label asp-for="Photo" class="control-label"></label>
 
                     <input name="File" type="file" class="form-control" />
                     <span asp-validation-for="Photo" class="text-danger"></span>
