--- a/HrPortalV2.Web/Views/Resumes/Index.cshtml
+++ b/HrPortalV2.Web/Views/Resumes/Index.cshtml
@@ -53,8 +53,8 @@
         @foreach (var item in Model)
         {
         <tr>
-            <td class="text-nowrap all">
-                @Html.DisplayFor(modelItem => item.Photo)
+            <td class="all">
+                <img style="width:50px;" src="~/Uploads/@item.Photo" />
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.FirstName)
@@ -93,10 +93,10 @@
             <td>
                 <div class="text-nowrap">
                     <a asp-action="Details" asp-route-id="@item.Id" asp-controller="Resumes" class="btn btn-success btn-sm"><i class="fa fa-trash"></i>Özgeçmiş Detayı</a>
-                        <a asp-action="SendMessageToResume" asp-controller="Messages" asp-route-resumeId="@item.Id" class="btn btn-warning btn-sm"><i class="fa fa-envelope-o"></i>Mesaj Gönder</a>
+                    <a asp-action="SendMessageToResume" asp-controller="Messages" asp-route-resumeId="@item.Id" class="btn btn-warning btn-sm"><i class="fa fa-envelope-o"></i>Mesaj Gönder</a>
                 </div>
             </td>
-            
+
         </tr>
         }
     </tbody>
