--- a/HrPortalV2.Web/Views/Resumes/MyResumes.cshtml
+++ b/HrPortalV2.Web/Views/Resumes/MyResumes.cshtml
@@ -57,8 +57,8 @@
         @foreach (var item in Model)
         {
         <tr>
-            <td class="text-nowrap all">
-                @Html.DisplayFor(modelItem => item.Photo)
+            <td class="all">
+                <img style="width:50px;" src="~/Uploads/@item.Photo" />
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.FirstName)
@@ -94,7 +94,7 @@
                 @Html.DisplayFor(modelItem => item.Occupation.Name)
             </td>
             <td class="text-nowrap">
-                <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-success btn-sm"><i class="fa fa-edit"></i> Düzenle</a> 
+                <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-success btn-sm"><i class="fa fa-edit"></i> Düzenle</a>
                 <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-danger btn-sm"><i class="fa fa-trash"></i> Sil</a>
                 <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-success btn-sm"><i class="fa fa-edit"></i> Detaylar</a>
             </td>
