--- a/HrPortalV2.Web/Areas/Admin/Views/Companies/Create.cshtml
+++ b/HrPortalV2.Web/Areas/Admin/Views/Companies/Create.cshtml
@@ -107,14 +107,14 @@
                 <span asp-validation-for="IPAddress" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Oluştur" class="btn btn-default" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Listeye geri dön</a>
 </div>
 
 @section Scripts {
