--- a/HrPortalV2.Web/Areas/Admin/Views/Companies/Edit.cshtml
+++ b/HrPortalV2.Web/Areas/Admin/Views/Companies/Edit.cshtml
@@ -112,7 +112,7 @@
 				<span asp-validation-for="IPAddress" class="text-danger"></span>
 			</div>
 			<div class="form-group">
-				<input type="submit" value="Kaydet" class="btn btn-default" />
+				<input type="submit" value="Kaydet" class="btn btn-sm btn-primary" />
 				<a asp-action="Index"class="btn btn-sm btn-danger">İptal</a>
 			</div>
 		</form>
