--- a/HrPortalV2.Web/Areas/Admin/Views/Jobs/Index.cshtml
+++ b/HrPortalV2.Web/Areas/Admin/Views/Jobs/Index.cshtml
@@ -7,7 +7,7 @@
 
 
 <p>
-    <a asp-action="Create"class="btn btn-sm btn-primary">Yeni Meslek</a>
+    <a asp-action="Create"class="btn btn-sm btn-primary">Yeni İş Ekle</a>
 </p>
 <table  id="tblRecords" class="table">
     <thead>
@@ -102,7 +102,7 @@
             <td>
                 @Html.DisplayFor(modelItem => item.IPAddress)
             </td>
-            <td class="text-nowrap">
+            <td class="text-nowrap all">
                 <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-sm btn-primary">Düzenle</a> 
                 <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-sm btn-default">Detaylar</a> 
                 <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-sm btn-danger">Sil</a>
