--- a/HrPortalV2.Web/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/HrPortalV2.Web/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -52,9 +52,9 @@ License: You must have a valid license purchased only from themeforest(the above
         <!-- BEGIN HEADER INNER -->
         <div class="page-header-inner ">
             <!-- BEGIN LOGO -->
-            <div class="page-logo">
+            <div class="page-logo" style="background-color:#ffffff">
                 <a href="index.html">
-                    <img src="/images/logo_bilisimkariyer.png" alt="logo" class="logo-default" width="150" />
+                    <img src="/images/logo_bilisimkariyer.png" alt="logo" class="logo-default" width="135" style="background-color:#ffffff" />
                 </a>
                 <div class="menu-toggler sidebar-toggler">
                     <!-- DOC: Remove the above "hide" to enable the sidebar toggler button on header -->
