--- a/HrPortalV2.Web/Areas/Admin/Views/Users/Edit.cshtml
+++ b/HrPortalV2.Web/Areas/Admin/Views/Users/Edit.cshtml
@@ -21,6 +21,15 @@
             </div>
         </div>
         <div class="form-group">
+            <label class="control-label col-md-2">Roller</label>
+            <div class="col-md-10">
+                @foreach (var item in ViewBag.Roles)
+                {
+                    <input type="checkbox" name="SelectedRoles[]" value="@item.Name" @(ViewBag.UserRoles.Contains(item.Name)?"checked=checked":"") /> @item.Name<br />
+                }
+            </div>
+        </div>
+        <div class="form-group">
             <div class="col-md-10 col-md-offset-2">
                 <fieldset>
                     <legend>Parolayı Değiştir</legend>
