--- a/HrPortalV2.Web/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/HrPortalV2.Web/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -32,6 +32,12 @@ License: You must have a valid license purchased only from themeforest(the above
     <link href="/assets/global/plugins/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
     <link href="/assets/global/plugins/bootstrap-switch/css/bootstrap-switch.min.css" rel="stylesheet" type="text/css" />
     <!-- END GLOBAL MANDATORY STYLES -->
+    <!-- BEGIN PAGE LEVEL PLUGINS -->
+    <link href="/assets/global/plugins/bootstrap-daterangepicker/daterangepicker.min.css" rel="stylesheet" type="text/css" />
+    <link href="/assets/global/plugins/morris/morris.css" rel="stylesheet" type="text/css" />
+    <link href="/assets/global/plugins/fullcalendar/fullcalendar.min.css" rel="stylesheet" type="text/css" />
+    <link href="/assets/global/plugins/jqvmap/jqvmap/jqvmap.css" rel="stylesheet" type="text/css" />
+    <!-- END PAGE LEVEL PLUGINS -->
     <!-- BEGIN THEME GLOBAL STYLES -->
     <link href="/assets/global/css/components-rounded.min.css" rel="stylesheet" id="style_components" type="text/css" />
     <link href="/assets/global/css/plugins.min.css" rel="stylesheet" type="text/css" />
@@ -255,7 +261,6 @@ License: You must have a valid license purchased only from themeforest(the above
             <!-- BEGIN CONTENT BODY -->
             <div class="page-content">
                 @RenderBody()              
-               
             </div>
             <!-- END CONTENT BODY -->
         </div>
