--- a/HrPortalV2.Web/Areas/Admin/Views/Shared/_LoginPartial.cshtml
+++ b/HrPortalV2.Web/Areas/Admin/Views/Shared/_LoginPartial.cshtml
@@ -1,25 +1,41 @@
-@using Microsoft.AspNetCore.Identity
+﻿@using Microsoft.AspNetCore.Identity
 
 @inject SignInManager<IdentityUser> SignInManager
 @inject UserManager<IdentityUser> UserManager
 
 @if (SignInManager.IsSignedIn(User))
 {
-    <form asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })" method="post" id="logoutForm" class="navbar-right">
-        <ul class="nav navbar-nav navbar-right">
-            <li>
-                <a asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @UserManager.GetUserName(User)!</a>
-            </li>
-            <li>
-                <button type="submit" class="btn btn-link navbar-btn navbar-link">Logout</button>
-            </li>
-        </ul>
-    </form>
+<li class="dropdown dropdown-user">
+    <a href="javascript:;" class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown" data-close-others="true">
+        <img alt="" class="img-circle" src="/assets/layouts/layout2/img/avatar3_small.jpg" />
+        <span class="username username-hide-on-mobile"> Nick </span>
+        <i class="fa fa-angle-down"></i>
+    </a>
+
+
+
+    <ul class="dropdown-menu dropdown-menu-default">
+        <li>
+            <a href="/Identity/Account/Manage">
+                <i class="icon-user"></i> Profilim
+            </a>
+        </li>
+
+        <li class="divider"> </li>
+
+        <li>
+            <a href="javascript:void(0);" onclick="document.getElementById('logoutForm').submit();">
+                <i class="icon-key"></i> Çıkış
+            </a>
+        </li>
+    </ul>
+    <form asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })" method="post" id="logoutForm" class="navbar-right"></form>
+</li>
 }
 else
 {
     <ul class="nav navbar-nav navbar-right">
-        <li><a asp-area="Identity" asp-page="/Account/Register">Register</a></li>
-        <li><a asp-area="Identity" asp-page="/Account/Login">Login</a></li>
+        <li><a asp-area="Identity" asp-page="/Account/Register">Üye Ol</a></li>
+        <li><a asp-area="Identity" asp-page="/Account/Login">Giriş</a></li>
     </ul>
 }
