--- a/HrPortalV2.Web/Areas/Admin/Views/Resumes/Index.cshtml
+++ b/HrPortalV2.Web/Areas/Admin/Views/Resumes/Index.cshtml
@@ -17,10 +17,10 @@
             <th class="text-nowrap all">
                 @Html.DisplayNameFor(model => model.ResumeName)
             </th>
-            <th class="text-nowrap">
+            <th class="text-nowrap all">
                 @Html.DisplayNameFor(model => model.FirstName)
             </th>
-            <th class="text-nowrap">
+            <th class="text-nowrap all">
                 @Html.DisplayNameFor(model => model.LastName)
             </th>
             <th class="text-nowrap">
@@ -152,7 +152,7 @@
             <th class="text-nowrap never">
                 @Html.DisplayNameFor(model => model.IPAddress)
             </th>
-            <th class="text-nowrap">Eylemler</th>
+            <th class="text-nowrap all">Eylemler</th>
         </tr>
     </thead>
     <tbody>
@@ -167,8 +167,8 @@
             <td>
                 @Html.DisplayFor(modelItem => item.LastName)
             </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Photo)
+            <td class="all">
+                <img style="width:50px;" src="~/Uploads/Resumes/@item.Photo" />
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Gender)
@@ -296,10 +296,10 @@
             <td>
                 @Html.DisplayFor(modelItem => item.IPAddress)
             </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.Id"class="btn btn-sm btn-primary">Düzenle</a> 
-                <a asp-action="Details" asp-route-id="@item.Id"class="btn btn-sm btn-default">Detaylar</a> 
-                <a asp-action="Delete" asp-route-id="@item.Id"class="btn btn-sm btn-danger">Sil</a>
+            <td class="text-nowrap">
+                <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-sm btn-primary">Düzenle</a>
+                <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-sm btn-default">Detaylar</a>
+                <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-sm btn-danger">Sil</a>
             </td>
         </tr>
 }
