--- a/HrPortalV2.Web/Views/Companies/Edit.cshtml
+++ b/HrPortalV2.Web/Views/Companies/Edit.cshtml
@@ -23,11 +23,11 @@
             </div>
             <div class="form-group">
                 <input asp-for="Logo" type="hidden" />
-                <label asp-for="Logo" class="control-label"></label>
                 @if (!string.IsNullOrEmpty(Model.Logo))
                 {
-                    <img src="~/Uploads/@Model.Logo" width="50" />
+                    <img src="~/Uploads/@Model.Logo" width="50" /><br />
                 }
+                <label asp-for="Logo" class="control-label"></label>
                 <input name="File" type="file" class="form-control" />
                 <span asp-validation-for="Logo" class="text-danger"></span>
             </div>
