--- a/HrPortalV2.Web/Views/Jobs/Create.cshtml
+++ b/HrPortalV2.Web/Views/Jobs/Create.cshtml
@@ -24,7 +24,7 @@
                 <label asp-for="CompanyId" class="control-label"></label>
                 <div class="input-group">
                     <select asp-for="CompanyId" class="form-control" asp-items="ViewBag.CompanyId">
-                        <option value=""></option>
+                        <option value="">Firma Seçiniz</option>
                     </select>
                     <span class="input-group-btn">
                         <a asp-action="Create" asp-controller="Companies" class="btn btn-default">Firma Ekle...</a>
@@ -43,14 +43,14 @@
                 <span asp-validation-for="EndDate" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <div class="checkbox">
+                <div>
                     <label>
                         <input asp-for="IsApproved" /> @Html.DisplayNameFor(model => model.IsApproved)
                     </label>
                 </div>
             </div>
             <div class="form-group">
-                <div class="checkbox">
+                <div>
                     <label>
                         <input asp-for="IsActive" /> @Html.DisplayNameFor(model => model.IsActive)
                     </label>
