--- a/HrPortalV2.Web/Views/Jobs/Edit.cshtml
+++ b/HrPortalV2.Web/Views/Jobs/Edit.cshtml
@@ -45,14 +45,14 @@
                 <span asp-validation-for="EndDate" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <div class="checkbox">
+                <div>
                     <label>
                         <input asp-for="IsApproved" /> @Html.DisplayNameFor(model => model.IsApproved)
                     </label>
                 </div>
             </div>
             <div class="form-group">
-                <div class="checkbox">
+                <div>
                     <label>
                         <input asp-for="IsActive" /> @Html.DisplayNameFor(model => model.IsActive)
                     </label>
@@ -65,7 +65,8 @@
             <input asp-for="UpdatedBy" type="hidden" />
             <input asp-for="IPAddress" type="hidden" />
             <div class="form-group">
-                <input type="submit" value="Kaydet" class="btn btn-success btn-sm" />  <a asp-action="MyJobs" asp-controller="Jobs" asp-area="">Geri Dön</a>
+                <input type="submit" value="Kaydet" class="btn btn-success btn-sm" />
+                <a asp-action="MyJobs" asp-controller="Jobs" class="btn btn-sm btn-danger">Geri Dön</a>
             </div>
         </form>
     </div>
