--- a/HrPortalV2.Web/Areas/Admin/Views/Cities/Index.cshtml
+++ b/HrPortalV2.Web/Areas/Admin/Views/Cities/Index.cshtml
@@ -8,7 +8,7 @@
 <p>
     <a asp-action="Create" class="btn btn-sm btn-primary">Yeni Şehir</a>
 </p>
-<table class="table">
+<table class="table" id="tblRecords">
     <thead>
         <tr>
             <th>
