--- a/HrPortalV2.Web/Areas/Admin/Views/Counties/Create.cshtml
+++ b/HrPortalV2.Web/Areas/Admin/Views/Counties/Create.cshtml
@@ -18,7 +18,10 @@
             </div>
             <div class="form-group">
                 <label asp-for="CityId" class="control-label"></label>
-                <select asp-for="CityId" class ="form-control" asp-items="ViewBag.CityId"></select>
+                <select asp-for="CityId" class="form-control" asp-items="ViewBag.CityId">
+                    <option value="">Şehir Seçiniz</option>
+                </select>
+
             </div>
             <div class="form-group">
                 <label asp-for="CreateDate" class="control-label"></label>
