--- a/HrPortalV2.Web/Areas/Identity/Pages/Account/Login.cshtml
+++ b/HrPortalV2.Web/Areas/Identity/Pages/Account/Login.cshtml
@@ -48,31 +48,8 @@
     </div>
     <div class="col-md-6 col-md-offset-2">
         <section>
-            <h4>Giriş yapmak için başka bir hizmet kullanın.</h4>
-            <hr />
-            @{
-                if ((Model.ExternalLogins?.Count ?? 0) == 0)
-                {
-                    <div>
-                        <p>
-                            Yapılandırılmış harici kimlik doğrulama hizmetleri yoktur.
-                        </p>
-                    </div>
-                }
-                else
-                {
-                    <form asp-page="./ExternalLogin" asp-route-returnUrl="@Model.ReturnUrl" method="post" class="form-horizontal">
-                        <div>
-                            <p>
-                                @foreach (var provider in Model.ExternalLogins)
-                                {
-                                    <button type="submit" class="btn btn-default" name="provider" value="@provider.Name" title="Log in using your @provider.DisplayName account">@provider.DisplayName</button>
-                                }
-                            </p>
-                        </div>
-                    </form>
-                }
-            }
+            <br />
+            <img src="~/images/key.jpg" style="width:100%" />
         </section>
     </div>
 </div>
