--- a/HrPortalV2.Web/Views/Resumes/Details.cshtml
+++ b/HrPortalV2.Web/Views/Resumes/Details.cshtml
@@ -62,11 +62,17 @@
                                             <div class="col-md-4">
                                                 <p>
                                                     <strong>Telefon</strong><br />
-                                                    @Html.DisplayFor(model => model.MobilePhone)
-                                                </p>
+                                                    @if (User.IsInRole("Admin"))
+                                                    {<text>@Html.DisplayFor(model => model.MobilePhone)</text>}
+                                                else
+                                                { <text>*************</text> }
+                                                    </p>
                                                 <p>
                                                     <strong>E-mail</strong><br />
-                                                    @Html.DisplayFor(model => model.Email)
+                                                    @if (User.IsInRole("Admin"))
+                                                    {<text>@Html.DisplayFor(model => model.Email)</text>}
+                                                else
+                                                { <text>*************</text>}
                                                 </p>
                                             </div>
                                             <div class="col-md-4">
