--- a/HrPortalV2.Web/Areas/Admin/Views/Resumes/Index.cshtml
+++ b/HrPortalV2.Web/Areas/Admin/Views/Resumes/Index.cshtml
@@ -9,7 +9,7 @@
 
 
 <p>
-	<a asp-action="Create" class="btn btn-sm btn-primary">Yeni Özgeçmiş </a>
+	<a asp-action="Create" >Yeni Özgeçmiş </a>
 </p>
 <table id="tblRecords" class="table">
     <thead>
@@ -297,7 +297,7 @@
                 @Html.DisplayFor(modelItem => item.IPAddress)
             </td>
             <td class="text-nowrap">
-                <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-sm btn-primary">Düzenle</a>
+                <a asp-action="Edit" asp-route-id="@item.Id" >Düzenle</a>
                 <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-sm btn-default">Detaylar</a>
                 <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-sm btn-danger">Sil</a>
             </td>
