--- a/HrPortalV2.Web/Areas/Admin/Views/JobApplications/Index.cshtml
+++ b/HrPortalV2.Web/Areas/Admin/Views/JobApplications/Index.cshtml
@@ -7,7 +7,7 @@
 <h2>İş Başvuruları</h2>
 
 <p>
-	<a asp-action="Create" class="btn btn-sm btn-primary">İş başvuruları</a>
+	<a asp-action="Create" >Yeni İş başvuruları</a>
 </p>
 <table class="table" id="tblRecords">
     <thead>
