--- a/HrPortalV2.Web/Areas/Admin/Views/Jobs/Create.cshtml
+++ b/HrPortalV2.Web/Areas/Admin/Views/Jobs/Create.cshtml
@@ -24,7 +24,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="CompanyId" class="control-label"></label>
-                <select asp-for="CompanyId" class ="form-control" asp-items="ViewBag.CompanyId"></select>
+                <select asp-for="CompanyId" class="form-control" asp-items="ViewBag.CompanyId"></select>
             </div>
             <div class="form-group">
                 <label asp-for="PublishDate" class="control-label"></label>
@@ -87,14 +87,22 @@
                 <input asp-for="IPAddress" class="form-control" />
                 <span asp-validation-for="IPAddress" class="text-danger"></span>
             </div>
-			<div class="form-group">
-				<input type="submit" value="Kaydet" class="btn btn-primary" />
-				<a asp-action="Index"class=" btn btn-sm btn-danger">İptal</a>
-			</div>
+            <div class="form-group">
+                <input type="submit" value="Kaydet" class="btn btn-primary" />
+                <a asp-action="Index" class=" btn btn-sm btn-danger">İptal</a>
+            </div>
         </form>
     </div>
 </div>
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    <script src="https://cdn.ckeditor.com/ckeditor5/10.1.0/classic/ckeditor.js"></script>
+    <script>
+        ClassicEditor
+            .create(document.querySelector('#Description'))
+            .catch(error => {
+                console.error(error);
+            });
+    </script>
 }
