--- a/HrPortalV2.Web/Areas/Admin/Views/Jobs/Edit.cshtml
+++ b/HrPortalV2.Web/Areas/Admin/Views/Jobs/Edit.cshtml
@@ -7,7 +7,7 @@
 
 <hr />
 <div class="row">
-    <div class="col-md-12">	
+    <div class="col-md-12">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
@@ -87,14 +87,22 @@
                 <input asp-for="IPAddress" class="form-control" />
                 <span asp-validation-for="IPAddress" class="text-danger"></span>
             </div>
-			<div class="form-group">
-				<input type="submit" value="Kaydet" class="btn btn-default" />
-				<a asp-action="Index">İptal</a>
-			</div>
+            <div class="form-group">
+                <input type="submit" value="Kaydet" class="btn btn-default" />
+                <a asp-action="Index">İptal</a>
+            </div>
         </form>
     </div>
 </div>
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    <script src="https://cdn.ckeditor.com/ckeditor5/10.1.0/classic/ckeditor.js"></script>
+    <script>
+        ClassicEditor
+            .create(document.querySelector('#Description'))
+            .catch(error => {
+                console.error(error);
+            });
+    </script>
 }
