--- a/HrPortalV2.Web/Areas/Admin/Views/Users/Index.cshtml
+++ b/HrPortalV2.Web/Areas/Admin/Views/Users/Index.cshtml
@@ -29,7 +29,8 @@
             <td>@(item.LockoutEnabled ? "Evet" : "Hayır")</td>
             <td>@item.AccessFailedCount</td>
             <td>@item.LockoutEnd</td>
-            <td class="text-nowrap"><a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-sm btn-success">Düzenle</a> <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-sm btn-danger">Sil</a></td>
+            <td class="text-nowrap"><a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-sm btn-success">Düzenle</a> 
+            <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-sm btn-danger" onclick="return confirm('Silmek istediğinize emin misiniz?');">Sil</a></td>
         </tr>
         }
     </tbody>
